--- a/configs/smac/vita_3s5z_clean.yaml
+++ b/configs/smac/vita_3s5z_clean.yaml
@@ -16,24 +16,26 @@ model:
   kl_beta: 0.0005
   trust_lambda: 0.15
   comm_dropout: 0.1
-  enable_trust: true
-  enable_kl: true
+  enable_trust: false
+  enable_kl: false
+  max_neighbors: 4
   history_length: 4
 train:
   episode_length: 120
   updates: 1000
-  lr: 0.0003
+  lr: 0.0002
   gamma: 0.99
   gae_lambda: 0.95
   clip_param: 0.2
   ppo_epochs: 5
   num_mini_batch: 4
-  entropy_coef: 0.01
-  value_loss_coef: 0.5
+  entropy_coef: 0.008
+  value_loss_coef: 0.6
   max_grad_norm: 10.0
-  trust_warmup_updates: 200
-  kl_warmup_updates: 150
-  trust_delay_updates: 20
-  kl_delay_updates: 20
-  comm_delay_updates: 20
-  comm_warmup_updates: 120
+  trust_warmup_updates: 0
+  kl_warmup_updates: 0
+  trust_delay_updates: 0
+  kl_delay_updates: 0
+  comm_delay_updates: 80
+  comm_warmup_updates: 150
+  comm_full_warmup_updates: 200
