--- a/configs/smac/mappo_3s5z_clean.yaml
+++ b/configs/smac/mappo_3s5z_clean.yaml
@@ -6,6 +6,7 @@ env:
   map_name: 3s5z
   difficulty: "7"
   num_envs: 8
+  reward_scale: 20.0
   obs_noise_std: 0.0
   packet_drop_prob: 0.0
   malicious_agent_prob: 0.0
@@ -26,3 +27,5 @@ train:
   entropy_coef: 0.01
   value_loss_coef: 0.5
   max_grad_norm: 10.0
+  eval_interval_updates: 20
+  eval_episodes: 32
