--- a/configs/smac/vita_3s5z_clean.yaml
+++ b/configs/smac/vita_3s5z_clean.yaml
@@ -15,7 +15,7 @@ model:
   trust_gamma: 1.0
   kl_beta: 0.0005
   attn_bias_coef: 0.75
-  trust_lambda: 0.15
+  trust_lambda: 0.12
   trust_threshold: 0.3
   comm_dropout: 0.1
   enable_trust: true
@@ -33,12 +33,14 @@ train:
   ppo_epochs: 5
   num_mini_batch: 4
   entropy_coef: 0.008
-  value_loss_coef: 0.6
+  value_loss_coef: 0.7
   max_grad_norm: 10.0
   trust_warmup_updates: 100
   kl_warmup_updates: 0
   trust_delay_updates: 200
   kl_delay_updates: 0
   comm_delay_updates: 120
-  comm_warmup_updates: 180
+  comm_warmup_updates: 220
   comm_full_warmup_updates: 240
+  eval_interval_updates: 20
+  eval_episodes: 32
