value normalization&reward normalization&2s3z

--- a/configs/smac/mappo_2s3z_clean.yaml
+++ b/configs/smac/mappo_2s3z_clean.yaml
@@ -3,27 +3,27 @@ seed: 42
 cuda: true
 env:
   name: smac
-  map_name: 3s5z
+  map_name: "2s3z"
   difficulty: "7"
-  num_envs: 8
+  num_envs: 8            # 8 envs * 400 steps = 3200 batch size
   reward_scale: 1.0
   obs_noise_std: 0.0
   packet_drop_prob: 0.0
   malicious_agent_prob: 0.0
 model:
-  hidden_dim: 128
+  hidden_dim: 64         # SMAC 2s3z: lighter net suffices
   activation: relu
   max_neighbors: 4
   history_length: 1
 train:
-  episode_length: 120
-  updates: 1000
+  episode_length: 400    # avoid truncating battles on 2s3z
+  updates: 3000          # ~9.6M steps
   lr: 0.0005
   gamma: 0.99
   gae_lambda: 0.95
   clip_param: 0.2
-  ppo_epochs: 5
-  num_mini_batch: 4
+  ppo_epochs: 15         # simple map: more epochs per batch
+  num_mini_batch: 1      # use full batch
   entropy_coef: 0.01
   value_loss_coef: 0.5
   max_grad_norm: 10.0
