--- a/configs/smac/vita_2s3z_noise.yaml
+++ b/configs/smac/vita_2s3z_noise.yaml
@@ -1,18 +1,18 @@
 algorithm: vita
-seed: 42
+seed: 1337
 cuda: true
 env:
   name: smac
-  map_name: 3s5z
+  map_name: "2s3z"
   difficulty: "7"
   num_envs: 8
   reward_scale: 1.0
-  obs_noise_std: 0.0
-  packet_drop_prob: 0.0
-  malicious_agent_prob: 0.0
+  obs_noise_std: 0.1
+  packet_drop_prob: 0.1
+  malicious_agent_prob: 0.05
 model:
-  hidden_dim: 192
-  latent_dim: 96
+  hidden_dim: 128
+  latent_dim: 64
   trust_gamma: 1.0
   kl_beta: 0.0005
   attn_bias_coef: 0.75
@@ -20,21 +20,21 @@ model:
   trust_threshold: 0.3
   comm_dropout: 0.1
   enable_trust: true
-  enable_kl: false
+  enable_kl: true
   comm_sight_range: 5
   max_neighbors: 4
   history_length: 4
 train:
-  episode_length: 120
-  updates: 1000
-  lr: 0.0002
+  episode_length: 400
+  updates: 3000
+  lr: 0.0005
   gamma: 0.99
   gae_lambda: 0.95
   clip_param: 0.2
-  ppo_epochs: 5
-  num_mini_batch: 4
-  entropy_coef: 0.008
-  value_loss_coef: 0.7
+  ppo_epochs: 15
+  num_mini_batch: 1
+  entropy_coef: 0.01
+  value_loss_coef: 0.5
   max_grad_norm: 10.0
   trust_warmup_updates: 100
   kl_warmup_updates: 0
