noise para and trust rectify

--- a/configs/smac/3s5z/vita_3s5z_noise.yaml
+++ b/configs/smac/3s5z/vita_3s5z_noise.yaml
@@ -7,9 +7,10 @@ env:
   difficulty: "7"
   num_envs: 8
   reward_scale: 1.0
-  obs_noise_std: 0.1
-  packet_drop_prob: 0.1
-  malicious_agent_prob: 0.05
+  obs_noise_std: 0.0
+  packet_drop_prob: 0.0
+  malicious_agent_prob: 0.2
+  malicious_obs_noise_scale: 0.5
 model:
   hidden_dim: 192
   latent_dim: 96
