--- a/configs/smac/2s3z/mappo_2s3z_noise.yaml
+++ b/configs/smac/2s3z/mappo_2s3z_noise.yaml
@@ -7,9 +7,10 @@ env:
   difficulty: "7"
   num_envs: 8
   reward_scale: 1.0
-  obs_noise_std: 0.15
-  packet_drop_prob: 0.2
-  malicious_agent_prob: 0.05
+  obs_noise_std: 0.0
+  packet_drop_prob: 0.0
+  malicious_agent_prob: 0.2
+  malicious_obs_noise_scale: 1.0
 model:
   hidden_dim: 64
 train:
