--- a/configs/smac/2s3z/vita_2s3z_noise.yaml
+++ b/configs/smac/2s3z/vita_2s3z_noise.yaml
@@ -8,9 +8,16 @@ env:
   num_envs: 8
   reward_scale: 1.0
   obs_noise_std: 0.0
+  noise_warmup_steps: 0
   packet_drop_prob: 0.0
-  malicious_agent_prob: 0.2
-  malicious_obs_noise_scale: 1.0
+  malicious_agent_prob: 0.0
+  malicious_obs_noise_scale: 0.5
+  comm_noise_std: 0.0
+  comm_packet_drop_prob: 0.0
+  comm_malicious_agent_prob: 1.0
+  comm_malicious_noise_scale: 0.5
+  comm_malicious_mode: one_per_episode
+  #comm_malicious_fixed_agent_id: 0
 model:
   hidden_dim: 96
   latent_dim: 48
@@ -41,7 +48,7 @@ train:
   kl_warmup_updates: 50
   trust_delay_updates: 20
   kl_delay_updates: 0
-  comm_delay_updates: 20
+  comm_delay_updates: 80
   comm_warmup_updates: 80
   comm_full_warmup_updates: 120
   eval_interval_updates: 20
