--- a/configs/smac/3s5z/mappo_3s5z_noise.yaml
+++ b/configs/smac/3s5z/mappo_3s5z_noise.yaml
@@ -1,5 +1,5 @@
 algorithm: mappo
-seed: 42
+seed: 1
 cuda: true
 env:
   name: smac
@@ -7,23 +7,24 @@ env:
   difficulty: "7"
   num_envs: 8
   reward_scale: 1.0
-  obs_noise_std: 0.0
-  packet_drop_prob: 0.0
-  malicious_agent_prob: 0.2
-  malicious_obs_noise_scale: 0.5
+  obs_noise_std: 0.05
+  packet_drop_prob: 0.2
+  malicious_agent_prob: 0.1
+  malicious_obs_noise_scale: 3.0
+  noise_warmup_steps: 50000
 model:
-  hidden_dim: 128
+  hidden_dim: 64
 train:
-  episode_length: 120
-  updates: 1000
+  episode_length: 400
+  updates: 3125
   lr: 0.0005
   gamma: 0.99
   gae_lambda: 0.95
   clip_param: 0.2
   ppo_epochs: 5
-  num_mini_batch: 4
+  num_mini_batch: 1
   entropy_coef: 0.01
   value_loss_coef: 0.5
   max_grad_norm: 10.0
-  eval_interval_updates: 20
+  eval_interval_updates: 25
   eval_episodes: 32
