--- a/configs/smac/3s5z/vita_3s5z_noise.yaml
+++ b/configs/smac/3s5z/vita_3s5z_noise.yaml
@@ -1,5 +1,5 @@
 algorithm: vita
-seed: 42
+seed: 1
 cuda: true
 env:
   name: smac
@@ -7,42 +7,45 @@ env:
   difficulty: "7"
   num_envs: 8
   reward_scale: 1.0
-  obs_noise_std: 0.0
-  packet_drop_prob: 0.0
-  malicious_agent_prob: 0.2
-  malicious_obs_noise_scale: 0.5
+  obs_noise_std: 0.05
+  packet_drop_prob: 0.2
+  malicious_agent_prob: 0.1
+  malicious_obs_noise_scale: 3.0
+  noise_warmup_steps: 50000
 model:
-  hidden_dim: 192
-  latent_dim: 96
-  trust_gamma: 1.0
-  kl_beta: 0.0005
+  hidden_dim: 128
+  latent_dim: 64
+  trust_gamma: 10.0
+  kl_beta: 0.0001
   attn_bias_coef: 0.75
-  trust_lambda: 0.12
-  trust_threshold: 0.3
+  trust_lambda: 0.08
+  trust_threshold: 0.25
+  trust_keep_ratio: 0.7
   comm_dropout: 0.1
   enable_trust: true
-  enable_kl: false
-  comm_sight_range: 5
-  max_neighbors: 4
-  history_length: 4
+  enable_kl: true
+  comm_sight_range: 999
+  max_neighbors: 7
+  history_length: 1
 train:
-  episode_length: 120
-  updates: 1000
-  lr: 0.0002
+  episode_length: 400
+  updates: 3125
+  lr: 0.0005
   gamma: 0.99
   gae_lambda: 0.95
   clip_param: 0.2
   ppo_epochs: 5
-  num_mini_batch: 4
-  entropy_coef: 0.008
-  value_loss_coef: 0.7
+  num_mini_batch: 1
+  entropy_coef: 0.01
+  value_loss_coef: 0.5
+  use_value_active_masks: false
   max_grad_norm: 10.0
-  trust_warmup_updates: 100
-  kl_warmup_updates: 0
-  trust_delay_updates: 200
+  trust_warmup_updates: 500
+  kl_warmup_updates: 500
+  trust_delay_updates: 280
   kl_delay_updates: 0
-  comm_delay_updates: 120
-  comm_warmup_updates: 220
-  comm_full_warmup_updates: 240
-  eval_interval_updates: 20
+  comm_delay_updates: 80
+  comm_warmup_updates: 80
+  comm_full_warmup_updates: 120
+  eval_interval_updates: 25
   eval_episodes: 32
